<resources>
    <string name="app_name">Student Information Manager</string>

    <string name="dots_3_vertical">&#8942;</string>

    <string name="login_history">Login History</string>

    <string name="menu_student_manager">Student Manager</string>
    <string name="menu_user_manager">User Manager</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Log out</string>

    <string name="menu_details">Details</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>

    <string name="menu_add_student_manual">Create Manually</string>
    <string name="menu_add_student_import">Import</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="create">Create</string>
    <string name="save">Save</string>
    <string name="create_new_account">Create new account</string>
    <string name="confirm_removal_title">Confirm removal</string>
    <string name="confirm_removal_msg">Do you really want to remove this student?</string>
    <string name="confirm_removal_msg_certificate">Do you really want to remove this certificate from this student?</string>
    <string name="confirm_removal_msg_user">Do you really want to remove this user?</string>
    <string name="confirm_removal_accept">Remove</string>
    <string name="confirm_removal_deny">Cancel</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>

    <string name="add_user_account">Add user account</string>
    <string name="add_student">Add student</string>

    <string name="edit_student">Edit student</string>
    <string name="edit_user">Edit user</string>

    <string name="details_student">Student details</string>
    <string name="details_user">User details</string>

    <string name="student_code">Student code</string>
    <string name="code">Code</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="status">Status</string>
    <string name="role">Role</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="phone">Phone</string>
    <string name="enrollment_date">Enrollment date</string>
    <string name="major">Major</string>

    <string name="manage_certificate">Manage certificate</string>
    <string name="certificate">Certificate</string>
    <string name="certificate_name">Certificate name</string>
    <string name="certificate_score">Certificate score</string>

    <string name="personal_profile">Personal Profile</string>

    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="initial_birthday">01/01/2000</string>
    <string name="initial_enrollment">01/01/2023</string>

    <string name="sort_code_asc">Code ASC</string>
    <string name="sort_name_asc">Name ASC</string>
    <string name="sort_birthday_asc">Birthday ASC</string>
    <string name="sort_address_asc">Address ASC</string>
    <string name="sort_gender_asc">Gender ASC</string>
    <string name="sort_phone_asc">Phone ASC</string>
    <string name="sort_enrollmentdate_asc">Enrollment Date ASC</string>
    <string name="sort_major_asc">Major ASC</string>

    <string name="sort_code_desc">Code DESC</string>
    <string name="sort_name_desc">Name DESC</string>
    <string name="sort_birthday_desc">Birthday DESC</string>
    <string name="sort_address_desc">Address DESC</string>
    <string name="sort_gender_desc">Gender DESC</string>
    <string name="sort_phone_desc">Phone DESC</string>
    <string name="sort_enrollmentdate_desc">Enrollment Date DESC</string>
    <string name="sort_major_desc">Major DESC</string>

    <string name="default_status">Normal</string>
    <string name="default_role">Employee</string>

</resources>