<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_nav_student_manager"
            android:icon="@drawable/baseline_people_alt_24"
            android:title="@string/menu_student_manager" />
        <item
            android:id="@+id/menu_nav_account_manager"
            android:icon="@drawable/baseline_work_24"
            android:title="@string/menu_user_manager" />
        <item
            android:id="@+id/menu_nav_profile"
            android:icon="@drawable/baseline_manage_accounts_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/menu_nav_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/menu_logout" />
    </group>
</menu>