<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    android:orientation="vertical"
    tools:context=".ui.activity.CreateUserActivity">

    <TextView
        android:id="@+id/tv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/baseline_close_24"
        android:text="" />

    <TextView
        style="@style/TextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_user_account"
        android:textAllCaps="true"
        android:textColor="@color/green_secondary"
        android:textSize="25sp"
        android:textStyle="bold" />

    <!--    Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/email"
        android:textColorHint="@color/green_primary"
        app:boxStrokeColor="@color/green_primary"
        app:boxStrokeErrorColor="@color/red"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/green_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLength="100" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/password"
        android:textColorHint="@color/green_primary"
        app:boxStrokeColor="@color/green_primary"
        app:boxStrokeErrorColor="@color/red"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/green_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="100" />


    </com.google.android.material.textfield.TextInputLayout>

    <!--    Name-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/name"
        android:textColorHint="@color/green_primary"
        app:boxStrokeColor="@color/green_primary"
        app:boxStrokeErrorColor="@color/red"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/green_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:lines="1"
            android:maxLength="100" />


    </com.google.android.material.textfield.TextInputLayout>

    <!--    Age-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/age"
        android:textColorHint="@color/green_primary"
        app:boxStrokeColor="@color/green_primary"
        app:boxStrokeErrorColor="@color/red"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/green_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:lines="1"
            android:maxLength="100" />


    </com.google.android.material.textfield.TextInputLayout>

    <!--    Phone-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/phone"
        android:textColorHint="@color/green_primary"
        app:boxStrokeColor="@color/green_primary"
        app:boxStrokeErrorColor="@color/red"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/green_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:lines="1"
            android:maxLength="100" />


    </com.google.android.material.textfield.TextInputLayout>

    <!--    Status-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/status"
        android:textColorHint="@color/green_primary"
        app:boxStrokeColor="@color/green_primary"
        app:boxStrokeErrorColor="@color/red"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/green_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:imeOptions="actionNext"
            android:lines="1"
            android:maxLength="100"
            android:text="@string/default_status" />


    </com.google.android.material.textfield.TextInputLayout>

    <!--    Role-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/role"
        android:textColorHint="@color/green_primary"
        app:boxStrokeColor="@color/green_primary"
        app:boxStrokeErrorColor="@color/red"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/green_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:imeOptions="actionNext"
            android:lines="1"
            android:maxLength="100"
            android:text="@string/default_role" />


    </com.google.android.material.textfield.TextInputLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_create"
        style="@style/TextPrimaryOpposite"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/green_primary"
        android:text="@string/create"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:cornerRadius="4dp" />

</LinearLayout>