<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    android:orientation="vertical"
    tools:context=".ui.activity.DetailsUserActivity">

    <TextView
        android:id="@+id/tv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/baseline_close_24"
        android:text="" />


    <TextView
        style="@style/TextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details_user"
        android:textAllCaps="true"
        android:textColor="@color/green_secondary"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextPrimary"
                android:paddingVertical="5dp"
                android:textSize="18sp"
                android:text="@string/email"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextPrimary"
                android:paddingVertical="5dp"
                android:textSize="18sp"
                android:text="@string/name"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextPrimary"
                android:paddingVertical="5dp"
                android:textSize="18sp"
                android:text="@string/age"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextPrimary"
                android:paddingVertical="5dp"
                android:textSize="18sp"
                android:text="@string/phone"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextPrimary"
                android:paddingVertical="5dp"
                android:textSize="18sp"
                android:text="@string/role"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextPrimary"
                android:paddingVertical="5dp"
                android:textSize="18sp"
                android:text="@string/status"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextPrimary"
                android:paddingVertical="5dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/email"/>
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextPrimary"
                android:paddingVertical="5dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/name"/>
            <TextView
                android:id="@+id/tv_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextPrimary"
                android:paddingVertical="5dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/age"/>
            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextPrimary"
                android:paddingVertical="5dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/phone"/>
            <TextView
                android:id="@+id/tv_role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextPrimary"
                android:paddingVertical="5dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/role"/>
            <TextView
                android:id="@+id/tv_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextPrimary"
                android:paddingVertical="5dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/status"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/login_history"
        android:background="@color/green_secondary"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="24dp"
        android:gravity="center"/>

    <LinearLayout
        android:id="@+id/linear_login_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="vertical"/>


</LinearLayout>